# tiny-log

./: CMakeLists.txt  test.c  tiny-log.c  tiny-log.h  tiny-log.pc.in
